--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<header>
   <meta charset="utf-8">
   <title>Week 5 Assignment</title>
+  <link rel="stylesheet" href="stylesheet.css">
   <h1>Week 5 Assignment - Part 2</h1>
-</head>
+  <h2>Victor's Record Shop'</h2>
+</header>
 
 <body>
-  <p>See console for output.</p>
-  <!-- Create an unordered list with any questions you have -->
+  <main>
+    <p>See console for output.</p>
+    <!-- Create an unordered list with any questions you have -->
+  </main>
+
 </body>
 
 </html>
